# libupd

./: .gitmodules  CMakeLists.txt  libupd.h  test.c
.github/workflows/: test.yml
libupd/: array.h  buf.h  memory.h  msgpack.h  path.h  pathfind.h  proto.h  str.h  tensor.h  yaml.h
libupd/proto/: encoder.h  object.h
